--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,7 @@ header{
     background-color: white;
     border-radius: 20px 20px;
     padding: 30px;
+    margin-bottom: 20px;
 }
 
 .benefit-card > p{
@@ -360,4 +361,135 @@ header{
 .benefit-card > button:hover{
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+    /* QUINTA SECTION */
+
+.section-about{
+width: 1140PX;
+margin: auto;
+display: flex;
+margin-bottom: 40px;
+}
+
+.about-left{
+    width: 70%;
+}
+
+.about-left > h2{
+    color: #9792E4;
+    margin-top: 80px;
+    margin-bottom: 50px;
+    font-size: 3rem;
+}
+
+.about-left > p{
+    text-align: left;
+    line-height: 1.8rem;
+}
+
+.about-left > p:nth-of-type(1){
+    margin-bottom: 140px;
+}
+
+.about-right{
+    width: 30%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-right > img{
+    border-radius: 50%;
+    margin-top: 50px;
+}
+
+.about-right > p{
+    font-size: 1.6rem;
+    color: #9792E4;
+    text-align: left;
+    font-weight: bold;
+}
+
+.about-right > .absolute-quote{
+    position: absolute;
+    font-size: 3rem;
+    color: #9792E4;
+    top: 80px;
+}
+
+.about-right > button{
+    border: none;
+    border-radius: 20px 20px;
+    padding: 10px;
+    background-color: #9792E4;
+    color: white;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+
+.about-right > button:hover{
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+    /* SESTA SECTION */
+
+.section-free{
+    background-color: #9792E4;
+}
+
+.container-free{
+    width: 1140PX;
+    margin: auto;
+    padding-bottom: 20px;
+}
+
+.container-free > p:nth-of-type(1){
+ color: #B8B5EC;
+ padding-top: 25px;
+}
+
+.container-free > p:nth-of-type(2){
+    color: white;
+}
+
+.container-free > p:nth-of-type(3){
+    color: white;
+}
+
+.container-free > h2:nth-of-type(1){
+    font-size: 1.8rem;
+    color: white;
+    text-align: center;
+    margin-top: 15px;
+}
+
+.container-free > h2:nth-of-type(2){
+    font-size: 2.5rem;
+    color: #FDC15F;
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+.container-free > button{
+    border: none;
+    border-radius: 20px 20px;
+    color: #9792E4;
+    background-color: white;
+    font-weight: bold;
+    letter-spacing: 2px;
+    padding: 15px 20px;
+    margin-left: 32rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.container-free > button:hover{
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    color: white;
+    background-color: #FDC15F;
+    
 }
